--- a/client/index.html
+++ b/client/index.html
@@ -9,8 +9,13 @@
 </head>
 <body>
     <div id="chat-container">
-        <input type="text" id="name" placeholder="Name">
-        <button id="send">Send</button>
+        <div id="chat-window">
+            <div id="output"></div>
+            <div id="actions"></div>
+        </div>
+        <input type="text" id="username" placeholder="User Name">
+        <input type="text" id="message" placeholder="Message">
+        <button id="send" onclick="location.href='src/com.asubrothers.Game/index.html'">Send</button>
     </div>
     
     <script src="socket.io.js"></script>
