--- a/client/src/com.asubrothers.Game/index.html
+++ b/client/src/com.asubrothers.Game/index.html
@@ -5,13 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lord of war</title>
-    
+    <style type="text/css">
+        body {
+            overflow:hidden;
+        }
+        </style>
 </head>
 <body>
     <script type="text/javascript" src="dimensions.js"></script>
     <script type="text/javascript" src="keyboard.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/block.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/tree.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Maps/ConstructionPoint.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Maps/Construction.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Civilizations/character.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/map.js"></script>
     <script type="text/javascript" src="game.js"></script>
     <script type="text/javascript" src="main.js"></script>
