--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
         </div>
         <div id="chat_container">
             <input type="text" id="username" placeholder="ingrese su nombre de usuario">
-            <button id="send">Conectarse</button>
+            <button id="" onclick="location.href='src/com.asubrothers.Game/index.html'">Conectarse</button>
             <div class='alert hidden' id="alertUserExists"></div>
         </div>
     </div>
