--- a/client/src/com.asubrothers.Game/index.html
+++ b/client/src/com.asubrothers.Game/index.html
@@ -11,13 +11,15 @@
         }
         </style>
 </head>
-<body>
+<body oncontextmenu="return false;">
     <script type="text/javascript" src="dimensions.js"></script>
     <script type="text/javascript" src="keyboard.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/block.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/tree.js"></script>
-    <script type="text/javascript" src="../com.asubrothers.Maps/ConstructionPoint.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/Construction.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Maps/Action.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Maps/ConstructionPoint.js"></script>
+    
     <script type="text/javascript" src="../com.asubrothers.Civilizations/character.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/map.js"></script>
     <script type="text/javascript" src="game.js"></script>
