--- a/client/src/com.asubrothers.Game/index.html
+++ b/client/src/com.asubrothers.Game/index.html
@@ -12,13 +12,14 @@
         </style>
 </head>
 <body oncontextmenu="return false;">
+    <div id='test'></div>
     <script type="text/javascript" src="dimensions.js"></script>
     <script type="text/javascript" src="keyboard.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/block.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/tree.js"></script>
-    <script type="text/javascript" src="../com.asubrothers.Maps/Construction.js"></script>
-    <script type="text/javascript" src="../com.asubrothers.Maps/Action.js"></script>
-    <script type="text/javascript" src="../com.asubrothers.Maps/ConstructionPoint.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Maps/construction.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Maps/action.js"></script>
+    <script type="text/javascript" src="../com.asubrothers.Maps/constructionPoint.js"></script>
     
     <script type="text/javascript" src="../com.asubrothers.Civilizations/character.js"></script>
     <script type="text/javascript" src="../com.asubrothers.Maps/map.js"></script>
