--- a/client/index.html
+++ b/client/index.html
@@ -5,19 +5,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lord of War</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <div class="container">
-        <div>
-            <h1 class='text-center'>Lord of War</h1>
+    <div id="login">
+        <div class="container">
+            <div>
+                <h1 class='text-center'>Lord of War</h1>
+            </div>
+            <div id="chat_container">
+                <input type="text" id="username" placeholder="ingrese su nombre de usuario">
+                <button type="submit" id="send">Conectarse</button>
+                <div class='alert hidden' id="alertUserExists"></div>
+            </div>
         </div>
-        <div id="chat_container">
-            <input type="text" id="username" placeholder="ingrese su nombre de usuario">
-            <button id="" onclick="location.href='src/com.asubrothers.Game/index.html'">Conectarse</button>
-            <div class='alert hidden' id="alertUserExists"></div>
+    </div>
+    <div id="Rooms" class="d-none">
+
+            <div class="container">        
+                <div class="row mt-5">
+                    <div class="col-12 text-center"><h1>Rooms</h1></div>
+                    <div class="col-8">
+                        <div class="card">
+                            <h4 class="card-title text-center mt-4">Multiplayer</h4>
+                            <div class="card-body">
+                                <table class="table">
+                                <tr>
+                                    <th>Room</th>
+                                    <th>count</th>
+                                    <th>status</th>
+                                    <th></th>
+                                </tr>
+                                <div id="roomsList">
+                                    <tr >
+                                        <td>room 01</td>
+                                        <td>1/4</td>
+                                        <td>Open</td>
+                                        <td class="btn btn-primary btn-sm">Play</td>
+                                    </tr>
+                                </div>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <h4 class="card-title text-center">SinglePlayer</h4>
+                        <div class="card-body">
+                            <button class="btn btn-primary btn-block">Play</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                        <div class="card mt-5">
+                                <div class="card-title">
+                                    <h4 class="text-center mt-3">Cretion od the Room</h4>
+                                </div>
+                                <div class="car-body">
+                                    <table class="table">
+                                        <tr>
+                                            <th>Name User</th>
+                                            <th>name Room</th>
+                                            <th>Max User</th>
+                                        </tr>
+                                        <tr>
+                                            <td >Bruno</td>
+                                            <td><input id="nameRoom" type="text"></td>
+                                            <td><input id="countUserRoom" type="number" max="4" min="2" value="2"></td>
+                                        </tr>
+                                    </table>
+                                </div>
+                                <div class="card-footer">
+                                    <button class="btn btn-primary btn-block mt-2" id="newRoom">Creation new Room</button>
+                                </div>
+                            </div>
+                </div>
+            </div>
         </div>
     </div>
     <script src="js/main.js"></script>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
