--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,17 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div id="header" class="d-none">
+        <header>
+            <nav class="navbar bg-primary justify-content-end">
+                <ul class="navbar-nav">
+                    <li class="navbar-item">
+                        <a href="#" class="nav-link text-white" id="logOff">LogOff</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </div>
     <div id="login">
         <div class="container">
             <div>
@@ -72,8 +83,8 @@
         </div>
     </div>
     <script src="js/socket.io.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/io.js"></script>
+    <script src="js/main.js"></script>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
